--- a/assignment06.qmd
+++ b/assignment06.qmd
@@ -5,23 +5,34 @@ format: html
 editor: visual
 ---
 
-## Quarto
-
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
-
-## Running Code
-
-When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
-
 ```{r}
-1 + 1
+library(tidyverse)
+library(readxl)
+library(dplyr)
 ```
 
-You can add options to executable code like this
-
+## Exercise 01
 ```{r}
-#| echo: false
-2 * 2
+knitr::include_graphics("error_calculatiuons.jpg")
+
+
+
+## Confirming the errors
+true_value <- c(1,2,3,4,5)
+predicted_value <- c(2,2,1,8,4)
+
+error <- true_value - predicted_value
+error_squared <- error^2
+error_absolute <- abs(error)
+
+MSE <- mean(error_squared)
+RMSE <- sqrt(MSE)
+MAE <- mean(error_absolute)
 ```
 
-The `echo: false` option disables the printing of code (only output is displayed).
+## Exercise 02
+```{r}
+
+```
+
+
